# Math-Odyssey

./: .env.credentials  README.md  agents(broken).yaml  eval.sh  final-odyssey-math-with-levels-light.jsonl  final-odyssey-math-with-levels-mlight.jsonl  final-odyssey-math-with-levels-ulight.jsonl  final-odyssey-math-with-levels-vlight.jsonl  final_eval.sh  generate_answer.py  generate_question.py  output.txt  sample.json  sample.jsonl  stratified_sampling.py  tasks(broken).yaml
gen_formalizer/: .gitignore  README.md  attempt.json  attempt.txt  generate_score.py  json.txt  pyproject.toml  report.md  sneakpeak.txt
gen_formalizer/src/gen_formalizer/: crew.py  crewOptimized.py  main.py
gen_formalizer/src/gen_formalizer/config/: agents.yaml  agentsOptimized.yaml  tasks.yaml  tasksOptimized.yaml
