[project]
name = "gen_formalizer"
version = "0.1.0"
description = "gen-formalizer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
gen_formalizer = "gen_formalizer.main:run"
run_crew = "gen_formalizer.main:run"
train = "gen_formalizer.main:train"
replay = "gen_formalizer.main:replay"
test = "gen_formalizer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
